man/vzubc.8: fixed references to watch(1)
It was referred to as watch(1), watch(8) and just watch.
Fix and unify (watch(1) is the right way).

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzubc.8
+++ b/man/vzubc.8
@@ -26,11 +26,11 @@ Watch mode: run itself under \fBwatch\fR(1), redisplaying the output
 every 2 seconds (by default) until interrupted by Ctrl-C.
 .TP
 .B -wd
-Make \fBwatch\fR highlight the differences between current and previous
+Make \fBwatch\fR(1) highlight the differences between current and previous
 output (corresponds to \fBwatch -d\fR option).
 .TP
 .BI -wn \ time
-Refresh interval for \fBwatch\fR(8), in seconds (corresponds to \fBwatch -n \fItime\fR).
+Refresh interval for \fBwatch\fR(1), in seconds (corresponds to \fBwatch -n \fItime\fR).
 .TP
 .BR -q , \ --quiet
 Quiet mode. In this mode, \fBvzubc\fR only shows beancounters with fails and
