--- a/man/vzcfgvalidate.8
+++ b/man/vzcfgvalidate.8
@@ -1,27 +1,28 @@
-.TH vzcfgvalidate 8 "6 Apr 2010" "OpenVZ" "Containers"
+.TH vzcfgvalidate 8 "6 Jun 2011" "OpenVZ" "Containers"
 .SH NAME
 vzcfgvalidate \- validate a container configuration file
 .SH SYNOPSIS
 vzcfgvalidate [\fB-r\fR | \fB-i\fR] \fIconfigfile\fR
+.SH DESCRIPTION
+This utility checks validity of resource control parameters in a container
+configuration file \fIconfigfile\fR. Some of the User Beancounter
+parameters have interdependencies, and if those are not met, configuration
+is inconsistent. The utility finds and reports such inconsistencies.
+
+There are three severity levels in the output: Error, Warning,
+and Recommendation.
 .SH OPTIONS
 .TP
 \fB-r\fR
-Repair mode.
+Repair mode (corrects \fIconfigfile\fR).
 .TP
 \fB-i\fR
 Interactive repair mode.
-.SH DESCRIPTION
-This utility checks validity of resource control parameters in a container
-configuration file \fIconfigfile\fR. Configurations where resources allowed
-for a container exceeds system capacity are not valid and dangerous
-from stability point of view.
-
-There are three severity levels in output: Error, Warning, Recommendation.
 .SH DIAGNOSTICS
 Normally, exit status is 0. On program execution error, exit status is 1.
-If validation failed exit status is 2.
+If the validation fails, exit status is 2.
 .SH SEE ALSO
 .BR ctid.conf (5),
 .BR http://wiki.openvz.org/UBC_consistency_check .
 .SH LICENSE
-Copyright (C) 2000-2010, Parallels, Inc. Licensed under GNU GPL.
+Copyright (C) 2000-2011, Parallels, Inc. Licensed under GNU GPL.
