man/vzpid.8: a few fixes
(1) Remove abbreviation from NAME

(2) Remove -h from SYNOPSYS

(3) Reformat SYNOPSYS using .SY/.OP/.YS

(4) SYNOPSYS: pid is not optional!

(5) Add - to SYNOPSYS and OPTIONS

(6) Note that many pids can be specified

(7) Reformat OPTIONS using .TP

(8) Fix copyright year

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzpid.8
+++ b/man/vzpid.8
@@ -1,16 +1,25 @@
-.TH vzpid 8 "22 Feb 2008" "OpenVZ" "Containers"
+.TH vzpid 8 "6 Jun 2011" "OpenVZ" "Containers"
 .SH NAME
-vzpid \- display the CT ID given the process ID (PID).
+vzpid \- display the CT ID given the process ID
 .SH SYNOPSIS
-vzpid [\fB-h\fR] [\fIpid\fR [...]]
+.SY vzpid
+\fIpid\fR [...]
+.SY vzpid
+.B -
+.YS
 .SH DESCRIPTION
 This script displays the CT ID the process with the given \fIpid\fR belongs to.
 .SH OPTIONS
-.IP \fIpid\fR
-The \fIpid\fR of the process to display the CT ID of.
+.TP
+.I pid
+The \fIpid\fR of the process to display the CT ID of. Can be specified
+multiple times.
+.TP
+.B -
+Read PID(s) from the standard input.
 .SH RETURN CODE
 Returns 0 upon a successful execution.
 .SH SEE ALSO
 .BR vzctl (8).
 .SH LICENSE
-Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
+Copyright (C) 2000-2011, Parallels, Inc. Licensed under GNU GPL.
