man/*: fix NAMEs
Fix one-line description of utilities, to be more in line with each other.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/arpsend.8
+++ b/man/arpsend.8
@@ -1,6 +1,6 @@
 .TH arpsend 8 "27 Apr 2011" "OpenVZ" "Containers"
 .SH NAME
-arpsend \- utility to send ARP requests.
+arpsend \- send ARP requests
 .SH SYNOPSIS
 arpsend < \fB-U\fR \fB-i\fR\ \fIsource_ip\fR |\ \fB-D\fR
 \fB-e\fR\ \fItarget_ip\fR [\fB-e\fR\ \fItarget_ip\fR]\ ... >
