--- a/man/vzcalc.8
+++ b/man/vzcalc.8
@@ -1,6 +1,6 @@
 .TH vzcalc 8 "10 Dec 2009" "OpenVZ" "Containers"
 .SH NAME
-vzcalc \- utility to calculate the container's resources usage.
+vzcalc \- calculate resource usage of a container
 .SH SYNOPSIS
 vzcalc [\fB-v\fR] \fICTID\fR
 .SH OPTIONS
