--- a/man/vzcpucheck.8
+++ b/man/vzcpucheck.8
@@ -1,6 +1,6 @@
 .TH vzcpucheck 8 "22 Feb 2008" "OpenVZ" "Containers"
 .SH NAME
-vzcpucheck \- shows information about the CPU power and utilization.
+vzcpucheck \- show information about the CPU power and utilization.
 .SH SYNOPSIS
 vzcpucheck [\fI-v\fR]
 .SH DESCRIPTION
