--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -8,7 +8,7 @@
 ..
 .TH vzctl 8 "3 Jun 2011" "OpenVZ" "Containers"
 .SH NAME
-vzctl \- utility to control an OpenVZ container.
+vzctl \- perform various operations on an OpenVZ container
 .SH SYNOPSIS
 .SY vzctl
 [\fIflags\fR] \fBcreate\fR \fICTID\fR
