--- a/man/vzifup-post.8
+++ b/man/vzifup-post.8
@@ -1,6 +1,6 @@
 .TH vzifup-post 8 "4 Jul 2011" "OpenVZ" "Containers"
 .SH NAME
-vzifup-post \- adds containers' ARP records to the interface.
+vzifup-post \- add containers' ARP records to an interface
 .SH SYNOPSIS
 vzifup-post \fIDEVICE\fR
 .SH DESCRIPTION
