--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -1,6 +1,6 @@
 .TH vzlist 8 "4 Jul 2011" "OpenVZ" "Containers"
 .SH NAME
-vzlist \- containers listing utility
+vzlist \- show various information about containers
 .SH SYNOPSIS
 .SY vzlist
 [\fB-a\fR | \fB-S\fR]
