--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -1,7 +1,7 @@
 .TH vzmigrate 8 "6 Jul 2010" "OpenVZ" "Containers"
 
 .SH NAME
-vzmigrate \- utility for container migration between hardware nodes.
+vzmigrate \- migrate a container between two OpenVZ servers
 
 .SH SYNOPSIS
 .TP
