--- a/man/vzubc.8
+++ b/man/vzubc.8
@@ -1,6 +1,6 @@
 .TH vzubc 8 "3 Jun 2011" "OpenVZ" "Containers"
 .SH NAME
-vzubc \- show User Beancounters in a human-readable format.
+vzubc \- show User Beancounters in a human-readable format
 .SH SYNOPSIS
 vzubc [\fIoption\fR ...] [\fICTID\fR ...]
 .SH DESCRIPTION
