--- a/man/ndsend.8
+++ b/man/ndsend.8
@@ -1,6 +1,6 @@
 .TH ndsend 8 "4 May 2011" "OpenVZ" "Containers"
 .SH NAME
-ndsend \- sends an unsolicited Neighbor Advertisement ICMPv6 multicast packet.
+ndsend \- send a Neighbor Advertisement NDP packet
 .SH SYNOPSIS
 ndsend \fIaddress\fR \fIinterface\fR
 .SH DESCRIPTION
