man/vzubc.8: add DIAGNOSTICS
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzubc.8
+++ b/man/vzubc.8
@@ -109,6 +109,8 @@ mode (i.e. saved values for fail counter and held).
 /proc/user_beancounters
 /tmp/vzubc.store/ubc.*\fR
 .fi
+.SH DIAGNOSTICS
+Returns 0 upon successful execution, 1 otherwise.
 .SH SEE ALSO
 .BR watch (1),
 .BR vzlist (8),
