man/*: unified header for DIAGNOSTICS section
s/EXIT STATUS|RETURN CODE/DIAGNOSTICS/

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -879,7 +879,7 @@ Here is an example of a mount script, which makes host system's
    . $VE_CONFFILE
    mount -n --bind /mnt/disk $VE_ROOT/mnt/disk
 .EE
-.SH EXIT STATUS
+.SH DIAGNOSTICS
 Returns 0 upon success, or an appropriate error code in case of an error:
 .IP 1
 Failed to set a UBC parameter
