--- a/man/vzeventd.8
+++ b/man/vzeventd.8
@@ -33,7 +33,7 @@ Ignore.
 Run /usr/lib/vzctl/scripts/vzevent-reboot. This script takes care of rebooting
 a given CT.
 .P
-.SH RETURN CODE
+.SH DIAGNOSTICS
 Returns 0 upon success.
 .SH LICENSE
 Copyright (C) 2010, Parallels, Inc. Licensed under GNU GPL.
