--- a/man/vzcpucheck.8
+++ b/man/vzcpucheck.8
@@ -11,7 +11,7 @@ This script outputs information on the CPU power and utilization.
 .TP
 .B -v
 Display information for each container.
-.SH RETURN CODE
+.SH DIAGNOSTICS
 Returns 0 upon success.
 .SH SEE ALSO
 .BR vzctl (8).
