man/vzsplit.8: fix broken OPTIONS formatting
Broken by commit d031ac16

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzsplit.8
+++ b/man/vzsplit.8
@@ -23,14 +23,14 @@ containers, an appropriate message is shown and the sample configuration file
 is not generated.
 .SH OPTIONS
 .TP
-.BI -n numve
+.BI -n \ numve
 Specify the number of containers.
 .TP
-.BI -f conf_name
+.BI -f \ conf_name
 Specify the configuration file name. The program output is placed to
 /etc/vz/conf/ve-\fIconf_name\fR.conf-sample.
 .TP
-.BI -s swapsize
+.BI -s \ swapsize
 Specify the swap size in Kbytes. If this option is not given,
 the swap size is read from \fB/proc/meminfo\fR.
 .SH DIAGNOSTICS
