man/*: always use EXIT STATUS to describe, well, exit status
Previous commit aa3258e2426f unified the header of this section to be
DIAGNOSTICS. While unification was a good thing, name was badly chosen,
since DIAGNOSTICS is for various error messages printed by a program etc.,

The proper name is EXIT STATUS.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/arpsend.8
+++ b/man/arpsend.8
@@ -33,7 +33,7 @@ Set source IP address field in ARP packet.
 \fB-e\fR \fItarget_ip_address\fR
 Set target IP address field in ARP packet. Note that you can specify
 \fB-e\fR option multiple times to detect many IP addresses in one utility call.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 \fBarpsend\fR returns 0 upon successful execution. If something goes wrong, it
 returns an appropriate error code.
 .IP "1	EXC_USAGE"
