--- a/man/ndsend.8
+++ b/man/ndsend.8
@@ -14,7 +14,7 @@ Specify the IPv6 address to be advertised.
 .TP
 \fIinterface\fR
 Specify the network interface to send an advertisement from.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 \fBndsend\fR returns 0 upon successful execution. If something goes wrong, it
 returns an appropriate error code.
 .IP "1  EXC_USAGE"
