--- a/man/vzcalc.8
+++ b/man/vzcalc.8
@@ -28,7 +28,7 @@ amount of memory available for applications (both RAM and swap space).
 .IP \fBAlloc\ Mem\fR 4
 standard memory allocations made for applications in a container.
 This is a more "virtual" system resource than RAM or RAM and swap.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 Normally, the exit status is 0. On error, the exit status is 1.
 .SH LICENSE
 Copyright (C) 2000-2009, Parallels, Inc. Licensed under GNU GPL.
