--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -98,7 +98,7 @@ hard limit
 .B vzlist -o ctid,kmemsize,kmemsize.l -s kmemsize
 Show CTIDs, kmemsize usage, and kmemsize limit for all running containers,
 sorted by the kmemsize usage.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 Returns 0 upon success.
 .SH COPYRIGHT
 Copyright (C) 2000-2011, Parallels, Inc. Licensed under GNU GPL.
