--- a/man/vzmemcheck.8
+++ b/man/vzmemcheck.8
@@ -27,7 +27,7 @@ Display information for each container.
 Display absolute values (in megabytes). In this mode, the last
 two lines are the numerator and the denominator of the corresponding
 field.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 Normally, exit status is 0. On error, exit status is 1.
 .SH SEE ALSO
 .BR vzcfgvalidate (8),
