--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -72,7 +72,7 @@ Online migration of CT #102 to \fI192.168.1.130\fR:
 \f(CR	vzmigrate --online 192.168.1.130 102
 \fR
 
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 .TP
 .B 0 EXIT_OK
 Command completed successfully.
