--- a/man/vzsplit.8
+++ b/man/vzsplit.8
@@ -33,7 +33,7 @@ Specify the configuration file name. The program output is placed to
 .BI -s \ swapsize
 Specify the swap size in Kbytes. If this option is not given,
 the swap size is read from \fB/proc/meminfo\fR.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 \fBvzsplit\fR returns 0 upon a successful execution. If anything goes wrong, it
 returns 1.
 .SH SEE ALSO
