--- a/man/vzcfgvalidate.8
+++ b/man/vzcfgvalidate.8
@@ -18,7 +18,7 @@ Repair mode (corrects \fIconfigfile\fR).
 .TP
 \fB-i\fR
 Interactive repair mode.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 Normally, exit status is 0. On program execution error, exit status is 1.
 If the validation fails, exit status is 2.
 .SH SEE ALSO
