--- a/man/vzifup-post.8
+++ b/man/vzifup-post.8
@@ -11,7 +11,7 @@ and the script is usually called from system networking scripts.
 .TP
 .I DEVICE
 Network interface, e.g. \fBeth0\fR.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 Returns 0 upon success.
 .SH SEE ALSO
 .BR vzctl (8).
