--- a/man/vzpid.8
+++ b/man/vzpid.8
@@ -17,7 +17,7 @@ multiple times.
 .TP
 .B -
 Read PID(s) from the standard input.
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 Returns 0 upon a successful execution.
 .SH SEE ALSO
 .BR vzctl (8).
