--- a/man/vzubc.8
+++ b/man/vzubc.8
@@ -109,7 +109,7 @@ mode (i.e. saved values for fail counter and held).
 /proc/user_beancounters
 /tmp/vzubc.store/ubc.*\fR
 .fi
-.SH DIAGNOSTICS
+.SH EXIT STATUS
 Returns 0 upon successful execution, 1 otherwise.
 .SH SEE ALSO
 .BR watch (1),
