man/vzctl.8: Minor rewording in ACTION SCRIPTS
Not sure why I wrote that there are 8 scripts and then listed 10.
To not let the problem happen again, just say "the following scripts".

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -831,7 +831,7 @@ are global and per-CT scripts. Global scripts have a literal prefix of
 a \fICTID\fR numeric prefix and are executed for the given container
 only.
 
-There are 8 action scripts currently defined:
+The following action scripts are currently defined:
 .IP "\fBvps.premount\fR, \fICTID\fB.premount\fR"
 Global and per-CT mount scripts which are executed for a
 container before it is mounted. Scripts are executed in the host OS
