--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -1082,8 +1082,8 @@ To permanently remove this container:
    vzctl destroy 1000
 .EE
 .SH FILES
-.nf
-\fB\f(CR/etc/vz/vz.conf
+.EX
+/etc/vz/vz.conf
 /etc/vz/conf/\fICTID\fB\f(CR.conf
 /etc/vz/conf/vps.{premount,mount,umount,postumount}
 /etc/vz/conf/\fICTID\fB\f(CR.{premount,mount,start,stop,umount,postumount}
@@ -1092,7 +1092,7 @@ To permanently remove this container:
 /proc/user_beancounters
 /proc/bc/*
 /proc/fairsched\fR
-.fi
+.EE
 .SH SEE ALSO
 .BR vz.conf (5),
 .BR ctid.conf (5),
