--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -831,10 +831,14 @@ are global and per-CT scripts. Global scripts have a literal prefix of
 a \fICTID\fR numeric prefix and are executed for the given container
 only.
 
+Please note scripts are executed in a host system (CT0) context,
+with the exception of \fB.start\fR and \fB.stop\fR scripts, which
+are executed in a container context.
+
 The following action scripts are currently defined:
 .IP "\fBvps.premount\fR, \fICTID\fB.premount\fR"
 Global and per-CT mount scripts which are executed for a
-container before it is mounted. Scripts are executed in the host OS
+container before it is mounted. Scripts are executed in the host system
 context, while a CT is not yet mounted or running. Global script,
 if exists, is executed first.
 .IP "\fBvps.mount\fR, \fICTID\fB.mount\fR"
@@ -850,7 +854,7 @@ in a container context.
 .IP "\fBvps.umount\fR, \fICTID\fB.umount\fR"
 Global and per-CT umount scripts which are executed for a
 container before it is unmounted. Scripts are executed
-in the host OS context, while a CT is mounted. Global script,
+in the host system context, while a CT is mounted. Global script,
 if exists, is executed first.
 .IP "\fBvps.postumount\fR, \fICTID\fB.postumount\fR"
 Global and per-CT umount scripts which are executed for a
