man/vzctl.8: in SYNOPSYS --netif_del can be all
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -53,7 +53,7 @@ vzctl \- perform various operations on an OpenVZ container
 .OP --nameserver addr
 .OP --searchdomain name
 .OP --netif_add dev\fR[,\fIparams\fR...]
-.OP --netif_del dev
+.OP --netif_del dev\fR|\fBall\fR
 .\" veth interface configuration
 [\fB--ifname \fIdev\fR
 .OP --mac hwaddr
