--- a/man/vzeventd.8
+++ b/man/vzeventd.8
@@ -1,43 +1,55 @@
-.TH vzeventd 8 "7 Sep 2010" "OpenVZ" "Containers"
+.TH vzeventd 8 "28 Jun 2011" "OpenVZ" "Containers"
 .SH NAME
 vzeventd \- the OpenVZ events daemon.
 .SH SYNOPSIS
-vzeventd [\fB-v\fR] [\fB-d\fR]
-.br
-vzeventd \fB-h\fR
-.SH OPTIONS
-.IP \fB-v\fR 4
-Increase verbosity (can be used multiple times).
-.IP \fB-d\fR 4
-Debug mode (do not daemonize, run in foreground).
-.IP \fB-h\fR 4
-Display help and exit.
+.SY vzeventd
+.OP \-v
+.OP \-d
+.YS
+.SY vzeventd
+.B \-h
+.YS
 .SH DESCRIPTION
 This daemon takes care of events sent by the OpenVZ kernel
-(via netlink socket) and performs required actions associated with
+(via a netlink socket) and performs required actions associated with
 those events, by running specific scripts. Every event received contains
 a container ID, which is passed to the script as \fBVEID\fR environment
 variable.
 .P
 Current list of known events and associated \fBvzeventd\fR actions are:
-.IP \fBstart\fR 4
+.TP
+.B start
 Ignore.
-.IP \fBstop\fR 4
+.TP
+.B stop
 Run /usr/lib/vzctl/scripts/vzevent-stop. This script takes care of removing
 ARP and routing records for the given CT from CT0.
-.IP \fBmount\fR 4
+.TP
+.B mount
 Ignore.
-.IP \fBumount\fR 4
+.TP
+.B umount
 Ignore.
-.IP \fBreboot\fR 4
+.TP
+.B reboot
 Run /usr/lib/vzctl/scripts/vzevent-reboot. This script takes care of rebooting
 a given CT.
-.P
+.SH OPTIONS
+.TP
+.B \-v
+Increase verbosity (can be used multiple times).
+.TP
+.B \-d
+Debug mode (do not daemonize, run in foreground).
+.TP
+.B -h
+Display help and exit.
 .SH EXIT STATUS
 Returns 0 upon success.
 .SH LICENSE
-Copyright (C) 2010, Parallels, Inc. Licensed under GNU GPL.
+Copyright (C) 2010-2011, Parallels, Inc. Licensed under GNU GPL.
 .SH AUTHOR
 .PP
-This manual page was written by Thorsten Schifferdecker <tsd@debian.systs.org>
+This manual page was initially written by Thorsten Schifferdecker
+<tsd@debian.systs.org>
 for the \fBDebian GNU/Linux\fP system (but may be used by others).
