--- a/man/ndsend.8
+++ b/man/ndsend.8
@@ -2,24 +2,28 @@
 .SH NAME
 ndsend \- send a Neighbor Advertisement NDP packet
 .SH SYNOPSIS
-ndsend \fIaddress\fR \fIinterface\fR
+.SY ndsend
+.I address interface
+.YS
 .SH DESCRIPTION
 The \fBndsend\fR utility is called by \fBarpsend\fR(8) for IPv6 addresses
 to send an unsolicited Neighbor Advertisement ICMPv6 multicast packet
 announcing a given IPv6 address to all IPv6 nodes as per RFC4861.
 .SH OPTIONS
 .TP
-\fIaddress\fR
+.I address
 Specify the IPv6 address to be advertised.
 .TP
-\fIinterface\fR
+.I interface
 Specify the network interface to send an advertisement from.
 .SH EXIT STATUS
 \fBndsend\fR returns 0 upon successful execution. If something goes wrong, it
-returns an appropriate error code.
-.IP "1  EXC_USAGE"
+returns an appropriate error code:
+.TP
+.B 1  EXC_USAGE
 Usage error
-.IP "2  EXC_SYSTEM"
+.TP
+.B 2  EXC_SYSTEM
 System error
 .SH EXAMPLES
 To send a Neighbor Advertisement ICMPv6 on interface \fBeth0\fR with IPv6
@@ -35,5 +39,6 @@ address \fB2001:DB8::1\fR:
 Copyright (C) 2000-2011, Parallels, Inc. Licensed under GNU GPL.
 .SH "AUTHOR"
 .PP
-This manual page was written by Thorsten Schifferdecker <tsd@debian.systs.org>
+This manual page was initially written by Thorsten Schifferdecker
+<tsd@debian.systs.org>
 for the \fBDebian GNU/Linux\fP system (but may be used by others).
