--- a/man/vzcalc.8
+++ b/man/vzcalc.8
@@ -2,32 +2,48 @@
 .SH NAME
 vzcalc \- calculate resource usage of a container
 .SH SYNOPSIS
-vzcalc [\fB-v\fR] \fICTID\fR
-.SH OPTIONS
-.IP \fB-v\fR 4
-Display additional information.
+.SY vzcalc
+.OP -v
+.B CTID
+.YS
 .SH DESCRIPTION
 This utility displays the share of the host system resources a particular
 container is using. If the container is running, the current usage is
 displayed. High utilization values (>100%) mean the system is overloaded
 (or the container has an invalid configuration).
-.IP \fBCurrent\fR 4
-shows the amount of the resources consumed by the container at a given time.
-.IP \fBPromised\fR 4
-shows the resources soft limit values "promised" for a given container.
-.IP \fBMax\ \fR 4
-shows the resources hard limit values "promised" for a given container.
+.TP
+.B Current
+Shows the amount of the resources consumed by the container at a given time.
+.TP
+.B Promised
+Shows the resources soft limit values "promised" for a given container.
+.TP
+.B Max
+Shows the resources hard limit values "promised" for a given container.
 .P
-If the \fB-v\fR option is specified, the additional information is displayed.
-.IP \fBLow\ Mem\fR 4
-the part of memory residing at lower addresses and directly accessed by the kernel.
-.IP \fBTotal\ Ram\fR 4
-whole RAM
-.IP \fBMem+Swap\fR 4
-amount of memory available for applications (both RAM and swap space).
-.IP \fBAlloc\ Mem\fR 4
-standard memory allocations made for applications in a container.
+If the \fB-v\fR option is specified, the following additional information
+is also displayed:
+.TP
+.B Low Mem
+The part of memory residing at lower addresses and directly accessed
+by the kernel (only makes sense for 32-bit architectures).
+.TP
+.B Total RAM
+Total memory.
+.TP
+.B Mem+Swap
+Amount of memory available for applications (both RAM and swap space).
+.TP
+.B Alloc Mem
+Standard memory allocations made for applications in a container.
 This is a more "virtual" system resource than RAM or RAM and swap.
+.TP
+.B Num. Proc
+Number of processes.
+.SH OPTIONS
+.TP
+.B -v
+Display additional information.
 .SH EXIT STATUS
 Normally, the exit status is 0. On error, the exit status is 1.
 .SH LICENSE
