man/vz.conf.5: make SYNOPSYS content bold
...to be in line with ctid.conf(5)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vz.conf.5
+++ b/man/vz.conf.5
@@ -1,8 +1,8 @@
-.TH vz.conf 5 "6 May 2011" "OpenVZ" "Containers"
+.TH vz.conf 5 "28 Jun 2011" "OpenVZ" "Containers"
 .SH NAME
 vz.conf \- global OpenVZ configuration file
 .SH SYNOPSIS
-/etc/vz/vz.conf
+.B /etc/vz/vz.conf
 .SH DESCRIPTION
 This is the global configuration file for OpenVZ.
 It consists of lines in the form
