man/vzctl.8: use simfs in mount script example
Apparently bind mounts are not safe wrt checkpointing,
i.e. if a filesystem being bind-mounted is not recognized
by kernel checkpointing code (say, xfs is not in the list),
then checkpointing will fail.

To avoid this problem, use simfs instead of bind mount.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -883,7 +883,9 @@ Here is an example of a mount script, which makes host system's
    # Source both files. Note the order is important.
    . /etc/vz/vz.conf
    . $VE_CONFFILE
-   mount -n --bind /mnt/disk $VE_ROOT/mnt/disk
+   SRC=/mnt/disk
+   DST=/mnt/disk
+   mount -n -t simfs $SRC ${VE_ROOT}${DST} -o $SRC
 .EE
 .SH EXIT STATUS
 Returns 0 upon success, or an appropriate error code in case of an error:
