man/vzmigrate.8: remove # from CTID
This notation (CT #NNN) was never used elsewhere. Well, the actual reason
is that # have a special meaning if it's the first character on the line,
and this is exactly what happened, see
http://wiki.openvz.org/w/index.php?title=Man/vzmigrate.8&oldid=10671#EXAMPLES

This is just the easiest way to fix it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzmigrate.8
+++ b/man/vzmigrate.8
@@ -61,13 +61,13 @@ its progress.  Multiple \fB-v\fR options increase the verbosity.
 The maximum is 3.
 
 .SH EXAMPLES
-Migration of CT #101 to \fB192.168.1.130\fR with downtime:
+Migration of CT 101 to \fB192.168.1.130\fR with downtime:
 .PP
 .EX
    vzmigrate 192.168.1.130 101
 .EE
 
-Online migration of CT #102 to \fB192.168.1.130\fR:
+Online migration of CT 102 to \fB192.168.1.130\fR:
 .PP
 .EX
    vzmigrate --online 192.168.1.130 102
