vzctl set: introduce --ram and --swap
These are just an easy aliases for --physpages and --swappages,
the differences being:

1. There is a single argument -- the limit (the barrier is set to 0).
2. The argument is in bytes (with optional K/M/G/T suffix).

While at it, document PHYSPAGES and SWAPPAGES in ctid.conf(5).

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/ctid.conf.5
+++ b/man/ctid.conf.5
@@ -84,6 +84,10 @@ Corresponds to the \fB--dgramrcvbuf\fR option.
 Corresponds to the \fB--dcachesize\fR option.
 .IP \fBNUMIPTENT\fR
 Corresponds to the \fB--numiptent\fR option.
+.IP \fBPHYSPAGES\fR
+Corresponds to the \fB--physpages\fR or \fB--ram\fR option.
+.IP \fBSWAPPAGES\fR
+Corresponds to the \fB--swappages\fR or \fB--swap\fR option.
 .IP \fBCPUUNITS\fR
 Corresponds to the \fB--cpuunits\fR option.
 .IP \fBDISK_QUOTA\fR="\fByes\fR|\fBno\fR"
