man/vzlist.8: fixed typo
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -64,7 +64,7 @@ List only containers with descriptions matching the \fIpattern\fR.
 .SS Possible fields
 
 .IP "\fB-L\fR, \fB--list\fR"
-list all available format specifiers that can be used for both output
+list all available format specifiers that can be used for
 both output (\fB-o\fR, \fB--output\fR) and the sorting order
 (\fB-s\fR, \fB--sort\fR).
 
