ploop: introduce some new exit codes
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -1077,6 +1077,26 @@ Waiting for container start failed
 Error saving container configuration file
 .IP 148
 Error setting container IO parameters (ioprio)
+.IP 150
+Ploop image file not found
+.IP 151
+Error creating ploop image
+.IP 152
+Error mounting ploop image
+.IP 153
+Error unmounting ploop image
+.IP 154
+Error resizing ploop image
+.IP 155
+Error converting container to ploop layout
+.IP 156
+Error creating ploop snapshot
+.IP 157
+Error merging ploop snapshot
+.IP 158
+Error deleting ploop snapshot
+.IP 159
+Error switching  ploop snapshot
 .SH EXAMPLES
 To create and start "basic" container with ID of 1000 using
 \fBcentos-5\fR OS template and IP address of 192.168.10.200:
